fix: removed horizontal scroll

--- a/faculdade/fprojeto02/style.css
+++ b/faculdade/fprojeto02/style.css
@@ -15,6 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
 }
 
 body {
